--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="common_cancel">Cancel</string>
     <string name="common_skip">Skip</string>
     <string name="common_delete">Delete</string>
-    <string name="common_correct">Correct</string>
+    <string name="common_correct" translatable="false">Correct</string>
     <string name="common_retry">Retry</string>
     <string name="guide_module_title_user">1. User</string>
     <string name="guide_module_title_user_register">1.1 Register</string>
@@ -129,9 +129,9 @@
     <string name="device_opt_control">Control</string>
     <string name="device_opt_setwifi">Config WiFi</string>
     <string name="device_opt_remove">Remove</string>
-    <string name="device_opt_433">433 add</string>
-    <string name="device_opt_433_setting">433 control</string>
-    <string name="device_opt_wake_up">Wake Up</string>
+    <string name="device_opt_433" translatable="false">433 add</string>
+    <string name="device_opt_433_setting" translatable="false">433 control</string>
+    <string name="device_opt_wake_up" translatable="false">Wake Up</string>
     <string name="device_opt_alarm">Alarm Push</string>
     <string name="device_opt_transcom">Serial</string>
     <string name="device_opt_play">Play</string>
@@ -192,7 +192,7 @@
     <string name="device_net_connect_type_p2p">P2P</string>
     <string name="device_net_connect_type_transmit">Transmit mode</string>
     <string name="device_net_connect_type_ip">IP</string>
-    <string name="device_net_connect_type_rps">RPS</string>
+    <string name="device_net_connect_type_rps" translatable="false">RPS</string>
     <string name="device_net_connect_type_unknown">Unknown type</string>
     <string name="device_setup">Device configuration</string>
     <string name="device_setup_encode">Encode configration</string>
@@ -215,16 +215,16 @@
     <string name="device_setup_hint_device_code_alarm">This function can generating a two-dimensional code include user infomation,than you kan control the device by the scan of WeChat</string>
     <string name="device_setup_hint_workrecord_alarm">This function show the probable electricity consume，only be reference resources</string>
     <string name="device_setup_hint_about_dev_alarm">device information</string>
-    <string name="device_setup_hint_devupdate">Device Update Check</string>
+    <string name="device_setup_hint_devupdate" translatable="false">Device Update Check</string>
     <string name="device_setup_hint_dev_jsonset">Please enter the json string</string>
     <string name="device_setup_system_function">System Functions(for Demo Only)</string>
-    <string name="device_setup_frontctr">Front Panel Operate</string>
+    <string name="device_setup_frontctr" translatable="false">Front Panel Operate</string>
     <string name="device_setup_alarm_center">Alarm Center</string>
     <string name="device_setup_jsonanddevcmd">Json and DevCmd Debug</string>
     <string name="device_time_sync_fail">Time synchronization failure</string>
     <string name="device_time_sync_succeed">Time synchronization success</string>
     <string name="device_time_in_AP_or_local_mode">Please synchronizate time under the mode of AP or Local</string>
-    <string name="device_setup_devcheckupdate_failed">Get Device Hard Version Failed!!!</string>
+    <string name="device_setup_devcheckupdate_failed" translatable="false">Get Device Hard Version Failed!!!</string>
     <string name="device_setup_devcheckupdate_versionlast">Already the Lstest!! Click to choose file local to update device</string>
     <string name="device_setup_devcheckupdate_clickupdate">Click to Update</string>
     <string name="device_setup_deviceupdate">Device Hardware Update</string>
@@ -624,12 +624,12 @@
     <string name="device_setup_gb_config_uialarmstateblind">Screen mask alarm is enabled</string>
     <string name="device_setup_gb_config_uialarmstateformance">System error alarm enabled</string>
     <string name="device_setup_gb_config_uialarmstateconnect">User connection alarm is enabled</string>
-    <string name="setup_btn_left">Left</string>
-    <string name="setup_btn_right">Right</string>
-    <string name="setup_btn_up">Up</string>
-    <string name="setup_btn_down">Down</string>
-    <string name="setup_btn_menu">Menu</string>
-    <string name="setup_btn_esc">Esc</string>
+    <string name="setup_btn_left" translatable="false">Left</string>
+    <string name="setup_btn_right" translatable="false">Right</string>
+    <string name="setup_btn_up" translatable="false">Up</string>
+    <string name="setup_btn_down" translatable="false">Down</string>
+    <string name="setup_btn_menu" translatable="false">Menu</string>
+    <string name="setup_btn_esc" translatable="false">Esc</string>
     <string name="get_device_state">Get device status</string>
     <string name="device_state">Device State:%s</string>
     <string name="wake_up_device">Wake up device</string>
@@ -648,8 +648,8 @@
     <string name="input_device_name">Please enter the device name</string>
     <string name="change_dev_name_s">Change device name success</string>
     <string name="change_dev_name_f">Change device name failed</string>
-    <string name="add_device_s">Add device success</string>
-    <string name="add_device_f">Add device failed</string>
+    <string name="add_device_s" translatable="false">Add device success</string>
+    <string name="add_device_f" translatable="false">Add device failed</string>
     <string name="change_dev_name">Change device name</string>
     <string name="wall_switch_one">Wall switch I</string>
     <string name="wall_switch_two">Wall switch II</string>
@@ -698,7 +698,7 @@
     <string name="Select_wifi">select the WiFi to which the device is connected from the list below</string>
     <string name="save">Save</string>
     <string name="password">password</string>
-    <string name="Frequency_support">Sorry, don't support the WiFi 5.8GHz, please use the WiFi 2.4GHz</string>
+    <string name="Frequency_support">Sorry, don\'t support the WiFi 5.8GHz, please use the WiFi 2.4GHz</string>
     <string name="Enter_link_wifi">enter the WiFi to connect to</string>
     <string name="Select_switch_model">please select mode</string>
     <string name="Current_link_model_ap">current AP mode</string>
@@ -725,4 +725,12 @@
     <string name="stop_360tour_first">please stop 360°tour first</string>
     <string name="request_data">Get the data...</string>
     <string name="preset_tour">Tour</string>
+    <string name="change_status">change status</string>
+    <string name="device_setup_radio_bycmd">DevCmdGeneral</string>
+    <string name="device_setup_radio_byjson">GetConfigByJson</string>
+    <string name="device_setup_systeminfo_devupdate">device_setup_systeminfo_devupdate</string>
+    <string name="flip_f">lật thất bại</string>
+    <string name="flip_s">lật thành công</string>
+    <string name="preset">preset</string>
+    <string name="request_data_error">request data error</string>
 </resources>
